--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -1,19 +1,19 @@
 <html><body>
 
-<h1>Privacy policy<h1>
+<h1>Privacy policy</h1>
 
-<h2>Information we collect<h2>
+<h2>Information we collect</h2>
 We collect information to provide better services to all of our users from figuring out basic stuff like which language you speak, to more complex things like which ads you will find most useful, the people who matter most to you online, or which YouTube videos you might like.
 
-We collect information in the following ways:
+<h2>We collect information in the following ways:</h2>
 Information you give us. For example, many of our services require you to sign up for a Google Account. When you do, we will ask for personal information, like your name, email address, telephone number or credit card to store with your account. If you want to take full advantage of the sharing features we offer, we might also ask you to create a publicly visible Google Profile, which may include your name and photo.
 
 Information we get from your use of our services. We collect information about the services that you use and how you use them, like when you watch a video on YouTube, visit a website that uses our advertising services, or view and interact with our ads and content. This information includes:
 
-Device information
+<h2>Device information</h2>
 We collect device-specific information (such as your hardware model, operating system version, unique device identifiers, and mobile network information including phone number). Google may associate your device identifiers or phone number with your Google Account.
 
-Log information
+<h2>Log information</h2>
 When you use our services or view content provided by us, we automatically collect and store certain information in server logs. This includes:
 
 details of how you used our service, such as your search queries. telephony log information like your phone number, calling-party number, forwarding numbers, time and date of calls, duration of calls, SMS routing information and types of calls. Internet protocol address.
@@ -22,18 +22,18 @@ device event information such as crashes, system activity, hardware settings, br
 
 When you use our services, we may collect and process information about your actual location. We use various technologies to determine location, including IP address, GPS, and other sensors that may, for example, provide Google with information on nearby devices, Wi-Fi access points and cell towers.
 
-Unique application numbers
+<h2>Unique application numbers</h2>
 Certain services include a unique application number. This number and information about your installation (for example, the operating system type and application version number) may be sent to us when you install or uninstall that service or when that service periodically contacts our servers, such as for automatic updates.
 
-Local storage
+<h2>Local storage</h2>
 We may collect and store information (including personal information) locally on your device using mechanisms such as browser web storage (including HTML 5) and application data caches.
 
-Cookies and similar technologies
+<h2>Cookies and similar technologies</h2>
 We and our partners use various technologies to collect and store information when you visit a Google service, and this may include using cookies or similar technologies to identify your browser or device. We also use these technologies to collect and store information when you interact with services we offer to our partners, such as advertising services or Google features that may appear on other sites. Our Google Analytics product helps businesses and site owners analyze the traffic to their websites and apps. When used in conjunction with our advertising services, such as those using the DoubleClick cookie, Google Analytics information is linked, by the Google Analytics customer or by Google, using Google technology, with information about visits to multiple sites.
 
 Information we collect when you are signed in to us, in addition to information we obtain about you from partners, may be associated with your Google Account. When information is associated with your Google Account, we treat it as personal information. For more information about how you can access, manage or delete information that is associated with your Google Account, visit the Transparency and choice section of this policy.
 
-How we use information we collect
+<h2>How we use information we collect</h2>
 We use the information we collect from all of our services to provide, maintain, protect and improve them, to develop new ones, and to protect Google and our users. We also use this information to offer you tailored content's like giving you more relevant search results and ads.
 
 We may use the name you provide for your Google Profile across all of the services we offer that require a Google Account. In addition, we may replace past names associated with your Google Account so that you are represented consistently across all our services. If other users already have your email, or other information that identifies you, we may show them your publicly visible Google Profile information, such as your name and photo.
@@ -52,7 +52,7 @@ We will ask for your consent before using information for a purpose other than t
 
 We processes personal information on our servers in many countries around the world. We may process your personal information on a server located outside the country where you live.
 
-Transparency and choice
+<h2>Transparency and choice</h2>
 People have different privacy concerns. Our goal is to be clear about what information we collect, so that you can make meaningful choices about how it is used. For example, you can:
 
 Review and update your activity controls to decide what types of data, such as videos you have watched on YouTube or past searches, you would like saved with your account when you use Google services. You can also visit these controls to manage whether certain activity is stored in a cookie or similar technology on your device when you use our services while signed-out of your account.
@@ -67,24 +67,24 @@ Choose whether your Profile name and Profile photo appear in shared endorsements
 
 You may also set your browser to block all cookies, including cookies associated with our services, or to indicate when a cookie is being set by us. However, it's important to remember that many of our services may not function properly if your cookies are disabled. For example, we may not remember your language preferences.
 
-Information you share
+<h2>Information you share</h2>
 Many of our services let you share information with others. Remember that when you share information publicly, it may be indexable by search engines, including Google. Our services provide you with different options on sharing and removing your content.
 
-Accessing and updating your personal information
+<h2>Accessing and updating your personal information</h2>
 Whenever you use our services, we aim to provide you with access to your personal information. If that information is wrong, we strive to give you ways to update it quickly or to delete it's unless we have to keep that information for legitimate business or legal purposes. When updating your personal information, we may ask you to verify your identity before we can act on your request.
 
 We may reject requests that are unreasonably repetitive, require disproportionate technical effort (for example, developing a new system or fundamentally changing an existing practice), risk the privacy of others, or would be extremely impractical (for instance, requests concerning information residing on backup systems).
 
 Where we can provide information access and correction, we will do so for free, except where it would require a disproportionate effort. We aim to maintain our services in a manner that protects information from accidental or malicious destruction. Because of this, after you delete information from our services, we may not immediately delete residual copies from our active servers and may not remove information from our backup systems.
 
-Information we share
+<h2>Information we share</h2>
 We do not share personal information with companies, organizations and individuals outside of Google unless one of the following circumstances applies:
 
 With your consent
 
 We will share personal information with companies, organizations or individuals outside of our companies when we have your consent to do so. We require opt-in consent for the sharing of any sensitive personal information.
 
-<h2>Changes to this privacy policy<h2>
+<h2>Changes to this privacy policy</h2>
 The Data Controller reserves the right to make changes to this privacy policy at any time by giving notice to its Users on this page. It is strongly recommended to check this page often, referring to the date of the last modification listed at the bottom. If a User objects to any of the changes to the Policy, the User must cease using this Application and can request that the Data Controller remove the Personal Data. Unless stated otherwise, the then-current privacy policy applies to all Personal Data the Data Controller has about Users.
  
 </body></html>
